--- a/stu/teacher.html
+++ b/stu/teacher.html
@@ -56,6 +56,9 @@
             <div class="text-center col-md-2 col-sm-6">
                 <button>录入学生成绩</button>
             </div>
+            <div class="text-center col-md-2 col-sm-6">
+                <button>查看教授课程</button>
+            </div>
         </div>
         <ul class="forms">
             <li class="show">
@@ -109,7 +112,7 @@
                         <button type="reset" class="btn btn-success">重置</button>
                     </div>
                 </form>
-            </li>          
+            </li>
             <li>
                 <form class="form-horizontal" method="get" action="/cgi-bin/sx/del.cgi">
                     <div class="form-group">
@@ -156,6 +159,20 @@
                         <label for="grade-wscore" class="col-sm-3 control-label">输入学生成绩</label>
                         <div class="col-sm-8">
                             <input type="text" name="grade" class="form-control" id="grade-wscore" placeholder="输入学生成绩">
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-success">提交</button>
+                        <button type="reset" class="btn btn-success">重置</button>
+                    </div>
+                </form>
+            </li>
+            <li>
+                <form class="form-horizontal" method="get" action="/cgi-bin/sx/course.cgi">
+                    <div class="form-group">
+                        <label for="cid-course" class="col-sm-3 control-label">输入*查看教授的所有课程</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="cid" class="form-control" id="cid-course" placeholder="输入*查看教授的所有课程">
                         </div>
                     </div>
                     <div class="text-center">
