--- a/stu/stu.html
+++ b/stu/stu.html
@@ -41,7 +41,6 @@
     <h1 class="header text-center">学生信息管理系统</h1>
     <div class="container">
         <div class="operation row">
-
             <div class="text-center col-md-2 col-sm-6">
                 <button>查询学生信息</button>
             </div>
@@ -51,16 +50,22 @@
             <div class="text-center col-md-2 col-sm-6">
                 <button>查看课程成绩</button>
             </div>
+            <div class="text-center col-md-2 col-sm-6">
+                <button>查看所选课程</button>
+            </div>
+            <div class="text-center col-md-2 col-sm-6">
+                <button>学生选课</button>
+            </div>
         </div>
         <ul class="forms">
             <li class="show">
                 <form class="form-horizontal" method="get" action="/cgi-bin/sx/sel.cgi">
-                    <div class="form-group">
-                        <label for="sname-sel" class="col-sm-2 control-label">输入姓名查询</label>
-                        <div class="col-sm-10">
-                            <input type="text" name="sname" class="form-control" id="sname-sel" placeholder="输入*查询所有">
-                        </div>
-                    </div>
+                  <div class="form-group">
+                      <label for="sid-sel" class="col-sm-2 control-label">输入学生学号查询信息</label>
+                      <div class="col-sm-10">
+                          <input type="text" name="sid" class="form-control" id="sid-sel" placeholder="请输入学生学号查询信息">
+                      </div>
+                  </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-success">提交</button>
                         <button type="reset" class="btn btn-success">重置</button>
@@ -111,6 +116,46 @@
                         <label for="sid-selscore" class="col-sm-2 control-label">输入学号查询课程成绩</label>
                         <div class="col-sm-10">
                             <input type="text" name="sid" class="form-control" id="sid-selscore" placeholder="输入学号查询所有课程成绩">
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-success">提交</button>
+                        <button type="reset" class="btn btn-success">重置</button>
+                    </div>
+                </form>
+            </li>
+            <li>
+                <form class="form-horizontal" method="get" action="/cgi-bin/sx/selcourse.cgi">
+                    <div class="form-group">
+                        <label for="sid-selcourse" class="col-sm-2 control-label">输入学号查询所选课程</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="sid" class="form-control" id="sid-selcourse" placeholder="输入学号查询所有课程">
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-success">提交</button>
+                        <button type="reset" class="btn btn-success">重置</button>
+                    </div>
+                </form>
+            </li>
+            <li>
+                <form class="form-horizontal" method="get" action="/cgi-bin/sx/stu_course.cgi">
+                    <div class="form-group">
+                        <label for="sid-stu_course" class="col-sm-3 control-label">输入学生学号</label>
+                        <div class="col-sm-9">
+                            <input type="text" name="sid" class="form-control" id="sid-stu_course" placeholder="输入学号">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="cid-stu_course" class="col-sm-3 control-label">输入要选课程的课程号学号</label>
+                        <div class="col-sm-9">
+                            <input type="text" name="cid" class="form-control" id="cid-stu_course" placeholder="输入要选课程的课程号">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="cname-stu_course" class="col-sm-3 control-label">输入要选课程的课程名</label>
+                        <div class="col-sm-9">
+                            <input type="text" name="cname" class="form-control" id="cname-stu_course" placeholder="输入要选课程的课程名">
                         </div>
                     </div>
                     <div class="text-center">
