--- a/stu/teacher.html
+++ b/stu/teacher.html
@@ -168,11 +168,11 @@
                 </form>
             </li>
             <li>
-                <form class="form-horizontal" method="get" action="/cgi-bin/sx/course.cgi">
+                <form class="form-horizontal" method="get" action="/cgi-bin/sx/tcourse.cgi">
                     <div class="form-group">
-                        <label for="cid-course" class="col-sm-3 control-label">输入*查看教授的所有课程</label>
+                        <label for="tid-tcourse" class="col-sm-3 control-label">输入教工号查看教授的所有课程</label>
                         <div class="col-sm-8">
-                            <input type="text" name="cid" class="form-control" id="cid-course" placeholder="输入*查看教授的所有课程">
+                            <input type="text" name="tid" class="form-control" id="tid-tcourse" placeholder="输入教工号查看教授的所有课程">
                         </div>
                     </div>
                     <div class="text-center">
