--- a/stu/teacher.html
+++ b/stu/teacher.html
@@ -100,7 +100,7 @@
                 </form>
             </li>
             <li>
-                <form class="form-horizontal" method="get" action="/cgi-bin/sx/sel.cgi">
+                <form class="form-horizontal" method="get" action="/cgi-bin/sx/tsel_stu.cgi">
                     <div class="form-group">
                         <label for="sname-sel" class="col-sm-2 control-label">输入姓名查询</label>
                         <div class="col-sm-7">
